Adds an eraser tool

--- a/sprite-editor/index.html
+++ b/sprite-editor/index.html
@@ -18,18 +18,18 @@
     <section id="tools-section">
       <ul id="tools" class="tool-list">
         <li id="pencil-tool">Pencil</li>
+        <li id="eraser-tool">Eraser</li>
+        <li id="line-tool">Line</li>
         <li id="bucket-tool">Bucket</li>
-        <li id="rectangle-tool">Rectangle</li>
-        <li id="ellipsis-tool">Ellipsis</li>
-        <li id="color-selection-tool">Color selection</li>
-        <li id="rectangle-selection-tool">Rectangle selection</li>
+        <li id="eye-dropper-tool">Eye dropper</li>
+        <!-- <li id="rectangle-selection-tool">Rectangle selection</li> -->
       </ul>
       <ul id="colors" class="tool-list">
         <li id="primary-color" class="swatch">
           <input type="color" value="#ffffff">
         </li>
         <li id="secondary-color" class="swatch">
-            <input type="color" value="#000000">
+          <input type="color" value="#000000">
         </li>
       </ul>
       <ul id="pallete" class="swatch-list">
