Adds a rectangle tool

--- a/sprite-editor/index.html
+++ b/sprite-editor/index.html
@@ -19,10 +19,10 @@
       <ul id="tools" class="tool-list">
         <li id="pencil-tool">Pencil</li>
         <li id="eraser-tool">Eraser</li>
-        <li id="line-tool">Line</li>
         <li id="bucket-tool">Bucket</li>
+        <li id="line-tool">Line</li>
+        <li id="rectangle-tool">Rectangle</li>
         <li id="eye-dropper-tool">Eye dropper</li>
-        <!-- <li id="rectangle-selection-tool">Rectangle selection</li> -->
       </ul>
       <ul id="colors" class="tool-list">
         <li id="primary-color" class="swatch">
