Adds plugin system + multi canvas plugin

--- a/sprite-editor/index.html
+++ b/sprite-editor/index.html
@@ -56,19 +56,8 @@
         </div>
       </aside>
     </section>
-    <section id="other-canvases-section">
-      <div class="other-canvas-container">
-        <div id="other-canvas-1" class="other-canvas checkerboard-background"></div>
-      </div>
-      <div class="other-canvas-container">
-        <div id="other-canvas-2" class="other-canvas checkerboard-background"></div>
-      </div>
-      <div class="other-canvas-container">
-        <div id="other-canvas-3" class="other-canvas checkerboard-background"></div>
-      </div>
-      <div class="other-canvas-container">
-        <div id="other-canvas-4" class="other-canvas checkerboard-background"></div>
-      </div>
+    <section id="colateral-section">
+      <!-- multi-canvas plugin put canvases here -->
     </section>
   </main>
 </body>
